<resources>
    <string name="app_name">Ruler-caltor</string>
    <string name="calibrateButtonText">Calibrate</string>
    <string name="optionButtonText">Option</string>
    <string name="doneButtonText">Done</string>
    <string name="calibrateText">"Calibrated dots per inch: "</string>
    <string name="rulerHeadCheckBoxText">Show ruler head</string>
    <string name="shortFormUnitCheckBoxText">Short Form Units</string>
    <string name="resetButtonText">Reset</string>
    <string name="resetPopupText">Are you sure you want \nto reset all preferences?</string>
    <string name="yesButtonText">Yes</string>
    <string name="cancelButtonText">Cancel</string>
    <string name="thickLineCheckBoxText">Thick Lines</string>
    <string name="guidingLinesCheckBoxText">Show measurement lines</string>
    <string name="decimalPlaceText">"Decimal Place: "</string>
    <string name="resetToastText">Preferences are reset!\nAuto-calibration complete.</string>
    <string name="metricTextViewText">Metric unit:</string>
    <string name="pref_calibrated_key" translatable="false">prefCalibratedKey</string>
    <string name="pref_final_y_dpi_key" translatable="false">prefFinalYDpiKey</string>
    <string name="pref_ruler_head_key" translatable="false">prefRulerHeadKey</string>
    <string name="pref_thick_lines_key" translatable="false">prefThickLinesKey</string>
    <string name="pref_guiding_lines_key" translatable="false">prefGuidingLinesKey</string>
    <string name="pref_decimal_place_key" translatable="false">prefDecimalPlaceKey</string>
    <string name="pref_metric_cm_key" translatable="false">prefMetricCMKey</string>
    <string name="pref_short_form_unit_key" translatable="false">prefShortFormUnitKey</string>
    <string name="pref_sound_key" translatable="false">prefSoundKey</string>
    <string name="pref_ruler_color_key" translatable="false">prefRulerColorKey</string>
    <string name="pref_number_color_key" translatable="false">prefNumberColorKey</string>
    <string name="inchTextViewText">inch</string>
    <string name="inTextViewText">in</string>
    <string name="cmTextViewText">cm</string>
    <string name="mmTextViewText">mm</string>
    <string name="inchShortFormText" translatable="false">in</string>
    <string name="cmShortFormText" translatable="false">cm</string>
    <string name="mmShortFormText" translatable="false">mm</string>
    <string name="dataFullToastText">Data slots are full!</string>
    <string name="autoCalibrateText">Auto-calibration complete.</string>
    <string name="calculatorButtonText">Calculator</string>
    <string name="copyClipToastText">Copied to clipboard.</string>
    <string name="sumAllText">Sum</string>
    <string name="clearAllText">Clear all data</string>
    <string name="oneEmptySpaceText" translatable="false">" "</string>
    <string name="fiveEmptySpaceText" translatable="false">"     "</string>
    <string name="informationTextViewText">"<b>Ruler-caltor v%s</b>\n\n\nWakeman Chau\nhauwingstudio@hotmail.com\n© 2020\nAll rights reserved"</string>
    <string name="sumAllAnswerText">Sum of data</string>
    <string name="tapTextViewText">← Tap to record\nmeasurement →</string>
    <string name="errorText">Error!</string>
    <string name="dividedByZeroErrText">Error: divided by zero</string>
    <string name="exceedMaxErrText">Error: exceed maximum value</string>
    <string name="expressionTooLongText">Error: expression too long</string>
    <string name="shareMessageText">Ruler-caltor\nA ruler tool with a built-in calculator.\n</string>
    <string name="chooseAppText">Please choose the way you want to share the app</string>
    <string name="soundCheckBoxText">Sound</string>
    <string name="rateButtonText">Rate app</string>
    <string name="shareButtonText">Share app</string>
    <string name="rulerColorText">Color</string>
    <string name="colorText">Color </string>
    <string name="pref_color_type_key" translatable="false">prefColorTypeKey</string>
</resources>
