<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#FFFFFF"
    tools:context=".MainActivity">

    <ImageView
        android:id="@+id/rulerImageTop"
        android:layout_width="100dp"
        android:layout_height="200dp"
        android:adjustViewBounds="true"
        android:scaleType="fitStart"
        android:visibility="visible"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <ImageView
        android:id="@+id/rulerImageMiddle"
        android:layout_width="100dp"
        android:layout_height="200dp"
        android:adjustViewBounds="true"
        android:scaleType="fitStart"
        android:visibility="visible"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/rulerImageTop" />

    <ImageView
        android:id="@+id/rulerImageBottom"
        android:layout_width="100dp"
        android:layout_height="200dp"
        android:adjustViewBounds="true"
        android:scaleType="fitStart"
        android:visibility="visible"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/rulerImageMiddle" />

    <ImageView
        android:id="@+id/rulerInchImageTop"
        android:layout_width="100dp"
        android:layout_height="200dp"
        android:adjustViewBounds="true"
        android:scaleType="fitStart"
        android:visibility="visible"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <ImageView
        android:id="@+id/rulerInchImageMiddle"
        android:layout_width="100dp"
        android:layout_height="200dp"
        android:adjustViewBounds="true"
        android:scaleType="fitStart"
        android:visibility="visible"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/rulerInchImageTop" />

    <ImageView
        android:id="@+id/rulerInchImageBottom"
        android:layout_width="100dp"
        android:layout_height="200dp"
        android:adjustViewBounds="true"
        android:scaleType="fitStart"
        android:visibility="visible"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/rulerInchImageMiddle" />

    <ImageView
        android:id="@+id/guidingButton1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:alpha="0.5"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.75"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.45"
        app:srcCompat="@drawable/ovalbutton3r" />

    <View
        android:id="@+id/divider1"
        android:layout_width="0dp"
        android:layout_height="1dp"
        android:layout_marginStart="16dp"
        android:layout_marginLeft="16dp"
        android:layout_marginTop="50dp"
        android:layout_marginEnd="16dp"
        android:layout_marginRight="16dp"
        android:alpha="0.5"
        android:background="#FF0000"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/guidingButton1" />

    <ImageView
        android:id="@+id/arrowHeadInchView1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:rotation="180"
        app:layout_constraintBottom_toBottomOf="@+id/divider1"
        app:layout_constraintEnd_toStartOf="@+id/divider1"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/divider1"
        app:srcCompat="@drawable/arrowheadred" />

    <ImageView
        android:id="@+id/arrowHeadCMView1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintBottom_toBottomOf="@+id/divider1"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/divider1"
        app:layout_constraintTop_toTopOf="@+id/divider1"
        app:srcCompat="@drawable/arrowheadred" />

    <ImageView
        android:id="@+id/guidingButton2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:alpha="0.5"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.25"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.55"
        app:srcCompat="@drawable/ovalbutton3g" />

    <View
        android:id="@+id/divider2"
        android:layout_width="0dp"
        android:layout_height="1dp"
        android:layout_marginStart="16dp"
        android:layout_marginLeft="16dp"
        android:layout_marginTop="50dp"
        android:layout_marginEnd="16dp"
        android:layout_marginRight="16dp"
        android:alpha="0.5"
        android:background="#00FF00"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/guidingButton2" />

    <ImageView
        android:id="@+id/arrowHeadInchView2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:rotation="180"
        app:layout_constraintBottom_toBottomOf="@+id/divider2"
        app:layout_constraintEnd_toStartOf="@+id/divider2"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/divider2"
        app:srcCompat="@drawable/arrowheadgreen" />

    <ImageView
        android:id="@+id/arrowHeadCMView2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintBottom_toBottomOf="@+id/divider2"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/divider2"
        app:layout_constraintTop_toTopOf="@+id/divider2"
        app:srcCompat="@drawable/arrowheadgreen" />

    <TextView
        android:id="@+id/guidingLineInchText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="24dp"
        android:layout_marginRight="24dp"
        android:onClick="saveInchData"
        app:layout_constraintEnd_toStartOf="@id/tapTextView"
        app:layout_constraintTop_toTopOf="@id/tapTextView" />

    <TextView
        android:id="@+id/guidingLineCMText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="24dp"
        android:layout_marginLeft="24dp"
        android:onClick="saveCMData"
        app:layout_constraintBottom_toBottomOf="@id/tapTextView"
        app:layout_constraintStart_toEndOf="@id/tapTextView" />

    <Button
        android:id="@+id/optionButton"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginBottom="8dp"
        android:onClick="openOption"
        android:text="@string/optionButtonText"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="@+id/calculatorButton"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="@+id/calculatorButton"
        app:layout_constraintTop_toBottomOf="@+id/calculatorButton" />

    <com.google.android.material.chip.ChipGroup
        android:id="@+id/dataChipGroup"
        android:layout_width="100dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"></com.google.android.material.chip.ChipGroup>

    <ImageButton
        android:id="@+id/upButton"
        android:layout_width="50dp"
        android:layout_height="50dp"
        android:onClick="scaleDown"
        android:scaleX="2"
        android:scaleY="2"
        android:visibility="invisible"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/arrow_drop_up_24px" />

    <ImageButton
        android:id="@+id/downButton"
        android:layout_width="50dp"
        android:layout_height="50dp"
        android:layout_marginTop="32dp"
        android:onClick="scaleUp"
        android:scaleX="2"
        android:scaleY="2"
        android:visibility="invisible"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/upButton"
        app:srcCompat="@drawable/arrow_drop_down_24px" />

    <Button
        android:id="@+id/doneButton"
        android:layout_width="100dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:onClick="hideUpDownButton"
        android:text="@string/doneButtonText"
        android:visibility="invisible"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/downButton" />

    <TextView
        android:id="@+id/calibrateTextView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="16dp"
        android:text="@string/calibrateText"
        android:visibility="invisible"
        app:layout_constraintBottom_toTopOf="@+id/upButton"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <TextView
        android:id="@+id/inchTextView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="70dp"
        android:layout_marginLeft="70dp"
        android:layout_marginTop="48dp"
        android:onClick="clickInch"
        android:rotation="270"
        android:text="@string/inchTextViewText"
        android:textSize="30sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/cmTextView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="32dp"
        android:layout_marginEnd="50dp"
        android:layout_marginRight="50dp"
        android:rotation="90"
        android:text="@string/cmTextViewText"
        android:textSize="30sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/calculatorButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:onClick="openCalculator"
        android:text="@string/calculatorButtonText"
        app:layout_constraintBottom_toTopOf="@+id/optionButton"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tapTextView" />

    <TextView
        android:id="@+id/tapTextView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/tapTextViewText"
        android:visibility="invisible"
        app:layout_constraintBottom_toTopOf="@+id/calculatorButton"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/downButton" />

</androidx.constraintlayout.widget.ConstraintLayout>